--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -101,18 +101,20 @@
       <Link>Acknowledgements.txt</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\..\files\SimulationInputFiles\infile.xml">
+      <Link>infile.xml</Link>
+    </Content>
+    <Content Include="..\..\files\SimulationInputFiles\infile_database.xml">
+      <Link>infile_database.xml</Link>
+    </Content>
+    <Content Include="..\..\files\SimulationInputFiles\infile_pMC_database.xml">
+      <Link>infile_pMC_database.xml</Link>
+    </Content>
+    <Content Include="..\..\files\SimulationInputFiles\infile_ROfRho.xml">
+      <Link>infile_ROfRho.xml</Link>
+    </Content>
     <Content Include="..\..\license.txt">
       <Link>license.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="infile.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="infile_database.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="infile_pMC_database.xml" />
-    <Content Include="infile_ROfRho.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="readme.txt">
