Updated MCSolverVM MC_DownloadDefaultSimulationInput_Executed to point to corrent folder in Vts.MonteCarlo. Modified Vts.MonteCarlo.Resources.DataStructures.SimulationInput files to have build action "Resource".

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -500,18 +500,18 @@
     <Resource Include="Modeling\Resources\ReferenceNurbs\RealDomain\v0p1\timeNurbsValues.xml" />
     <Resource Include="Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\ROfRhoAndTime.xml" />
     <Resource Include="Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\R_fxt.xml" />
-    <Content Include="..\..\files\SimulationInputFiles\infile.xml">
+    <Resource Include="..\..\files\SimulationInputFiles\infile.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\infile.xml</Link>
-    </Content>
-    <Content Include="..\..\files\SimulationInputFiles\infile_database.xml">
+    </Resource>
+    <Resource Include="..\..\files\SimulationInputFiles\infile_database.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\infile_database.xml</Link>
-    </Content>
-    <Content Include="..\..\files\SimulationInputFiles\infile_pMC_database.xml">
+    </Resource>
+    <Resource Include="..\..\files\SimulationInputFiles\infile_pMC_database.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\infile_pMC_database.xml</Link>
-    </Content>
-    <Content Include="..\..\files\SimulationInputFiles\infile_ROfRho.xml">
+    </Resource>
+    <Resource Include="..\..\files\SimulationInputFiles\infile_ROfRho.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\infile_ROfRho.xml</Link>
-    </Content>
+    </Resource>
     <Content Include="Modeling\Spectroscopy\ChromophoreList.xml" />
   </ItemGroup>
   <ItemGroup>
