Created SimulationInputProvider with three example methods. Added call to this provider in MCCommandLineApp.  Currently writes example files to newinfile_#.xml.  Can update later with something more descriptive. Updated unit test for MCCLApp to accept newly named generated file. Modified logic in DiffuseTransmittanceVirtualBoundary to test for location of tissue boundary in a way that will work for both MultiLayerTissue and SingleEllipsoidTissue. Deleted MultiLayerTissueProvider.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -578,6 +578,9 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationInput.cs">
       <Link>MonteCarlo\DataStructures\SimulationInput.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationInputProvider.cs">
+      <Link>MonteCarlo\DataStructures\SimulationInputProvider.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationOptions.cs">
       <Link>MonteCarlo\DataStructures\SimulationOptions.cs</Link>
     </Compile>
@@ -1030,9 +1033,6 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\MultiLayerTissue.cs">
       <Link>MonteCarlo\Tissues\MultiLayerTissue.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Tissues\MultiLayerTissueProvider.cs">
-      <Link>MonteCarlo\Tissues\MultiLayerTissueProvider.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\SingleInclusionTissue.cs">
       <Link>MonteCarlo\Tissues\SingleInclusionTissue.cs</Link>
