Added logging of MC simulation in Silverlight GUI, including a new TPL library Moved query for IsolatedStorage to occur upon first click of saving MC results

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -239,6 +239,9 @@
     <Compile Include="..\Vts\Common\Logging\NLogLogger.cs">
       <Link>Common\Logging\NLogLogger.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\Common\Logging\ObservableTarget.cs">
+      <Link>Common\Logging\ObservableTarget.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\Common\Math\Convolution2D.cs">
       <Link>Common\Math\Convolution2D.cs</Link>
     </Compile>
