--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -112,6 +112,7 @@
     <Content Include="..\..\files\SimulationInputFiles\infile_ellip.xml">
       <Link>infile_ellip.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="..\..\files\SimulationInputFiles\infile_pMC_database.xml">
       <Link>infile_pMC_database.xml</Link>
