Implemented MC timing capabilities in the SL GUI. In the future, would like to move these into the MC core, along with the other TPL capabilities, such as cancellation, batch running, and photon-parallel processing

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -179,6 +179,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Common\Stopwatch.cs" />
     <Compile Include="IO\KnownTypes.cs" />
     <Compile Include="Modeling\Spectroscopy\SpectralConverter.cs" />
     <Compile Include="MonteCarlo\Controllers\pMCDatabaseWriterController.cs" />
