--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -148,6 +148,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\StopwatchTests.cs" />
     <Compile Include="Common\Extensions\ArrayExtensionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -155,14 +156,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\Extensions\EnumExtensionsTests.cs" />
-    <Compile Include="Modeling\Spectroscopy\SpectralConverterTests.cs" />
-    <Compile Include="MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs" />
-    <Compile Include="MonteCarlo\Detectors\SpecularDetectorTests.cs" />
-    <Compile Include="MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MonteCarlo\Rng\SerializableMersenneTwisterTests.cs" />
     <Compile Include="Common\Helpers\Range\DoubleRangeTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -182,6 +175,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\PositionTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Common\Extensions\OpticalPropertiesExtensionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Factories\ComputationFactoryTests.cs">
@@ -217,6 +213,9 @@
     <Compile Include="Modeling\Spectroscopy\ChromophoreSpectrumTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Modeling\Spectroscopy\SpectralConverterTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Modeling\Spectroscopy\SpectralDatabaseTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -229,6 +228,9 @@
     <Compile Include="MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -238,13 +240,18 @@
     <Compile Include="MonteCarlo\DataStructures\OutputTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MonteCarlo\DataStructures\SimulationInputTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\DataStructures\SimulationOptionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MonteCarlo\Detectors\AnalogDetectorsTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -257,11 +264,13 @@
     <Compile Include="MonteCarlo\Detectors\pMCDAWDetectorsTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Helpers\SourceToolboxTests.cs" />
-    <Compile Include="MonteCarlo\IO\DetectorIOTests.cs">
+    <Compile Include="MonteCarlo\Detectors\SpecularDetectorTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Common\Extensions\OpticalPropertiesExtensionsTests.cs">
+    <Compile Include="MonteCarlo\Helpers\SourceToolboxTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\IO\DetectorIOTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
@@ -273,9 +282,21 @@
     <Compile Include="MonteCarlo\PhotonData\pMCDatabaseTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSourcesTests.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSourcesTests.cs" />
+    <Compile Include="MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\Sources\LineSourcesTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\Sources\PointSourcesTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -287,7 +308,6 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -300,6 +320,7 @@
     <Folder Include="Modeling\Optimizers\" />
     <Folder Include="Modeling\Tools\" />
     <Folder Include="MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\" />
+    <Folder Include="MonteCarlo\TallyActions\pMCTallies\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
