--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -129,6 +129,9 @@
     <Compile Include="..\Vts.Test\Common\Math\Convolution2DTests.cs">
       <Link>Common\Math\Convolution2DTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Common\OpticalPropertiesTests.cs">
+      <Link>Common\OpticalPropertiesTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Common\PositionTests.cs">
       <Link>Common\PositionTests.cs</Link>
     </Compile>
