Updated SIProvider to provide all input files needed for lab exercises. Modified links in MCCL and Resources in Vts.MonteCarlo. Updated MCCL unit test to use newly named files. Removed LabExercises folder in files/SimulationInput.  All sample input files including those for the lab exercises should go in files/SimulationInput.

--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -101,14 +101,17 @@
       <Link>Acknowledgements.txt</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\files\SimulationInputFiles\newinfile_ellip_RadianceOfRhoAndZAndAngle.xml">
-      <Link>newinfile_ellip_RadianceOfRhoAndZAndAngle.xml</Link>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_ellip_FluenceOfRhoAndZ.xml">
+      <Link>newinfile_ellip_FluenceOfRhoAndZ.xml</Link>
     </Content>
     <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_all_detectors.xml">
       <Link>newinfile_one_layer_all_detectors.xml</Link>
     </Content>
-    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_ROfRho.xml">
-      <Link>newinfile_one_layer_ROfRho.xml</Link>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_FluenceOfRhoAndZ_RadianceOfRhoAndZAndAngle.xml">
+      <Link>newinfile_one_layer_FluenceOfRhoAndZ_RadianceOfRhoAndZAndAngle.xml</Link>
+    </Content>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_ROfRho_FluenceOfRhoAndZ.xml">
+      <Link>newinfile_one_layer_ROfRho_FluenceOfRhoAndZ.xml</Link>
     </Content>
     <Content Include="..\..\files\SimulationInputFiles\newinfile_two_layer_ROfRho.xml">
       <Link>newinfile_two_layer_ROfRho.xml</Link>
