--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -514,14 +514,17 @@
     <Resource Include="Modeling\Resources\ReferenceNurbs\RealDomain\v0p1\timeNurbsValues.xml" />
     <Resource Include="Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\ROfRhoAndTime.xml" />
     <Resource Include="Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\R_fxt.xml" />
-    <Content Include="..\..\files\SimulationInputFiles\newinfile_ellip_RadianceOfRhoAndZAndAngle.xml">
-      <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_ellip_RadianceOfRhoAndZAndAngle.xml</Link>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_ellip_FluenceOfRhoAndZ.xml">
+      <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_ellip_FluenceOfRhoAndZ.xml</Link>
     </Content>
     <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_all_detectors.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_one_layer_all_detectors.xml</Link>
     </Content>
-    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_ROfRho.xml">
-      <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_one_layer_ROfRho.xml</Link>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_FluenceOfRhoAndZ_RadianceOfRhoAndZAndAngle.xml">
+      <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_one_layer_FluenceOfRhoAndZ_RadianceOfRhoAndZAndAngle.xml</Link>
+    </Content>
+    <Content Include="..\..\files\SimulationInputFiles\newinfile_one_layer_ROfRho_FluenceOfRhoAndZ.xml">
+      <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_one_layer_ROfRho_FluenceOfRhoAndZ.xml</Link>
     </Content>
     <Content Include="..\..\files\SimulationInputFiles\newinfile_two_layer_ROfRho.xml">
       <Link>MonteCarlo\Resources\DataStructures\SimulationInput\newinfile_two_layer_ROfRho.xml</Link>
