Bug fixes: 1) gui now updates with newly-loaded input files            2) cmd line timestamp re-added            3) simulation infiles generated            4) edits to naming of isotropic point/distributed point sources            5) fixed units of R(rho) from MC panel

--- a/src/Vts.MonteCarlo.CommandLineApplication/NLog.config
+++ b/src/Vts.MonteCarlo.CommandLineApplication/NLog.config
@@ -4,7 +4,7 @@
 
     <targets>
       <target name="logfile" xsi:type="File" fileName="file.txt" layout="${date:format=yyyyMMddHHmmss} ${message}"/>
-      <target name="console" xsi:type="Console"  layout="${message}"/>
+      <target name="console" xsi:type="Console"  layout="${date:format=HHmmss} ${message}"/>
     </targets>
   
     <rules>
